--- a/deploy/appset.yaml
+++ b/deploy/appset.yaml
@@ -22,7 +22,7 @@ spec:
         targetRevision: stage/{{stage}}
         path: app/stages/{{stage}}
       destination:
-        server: https://kubernetes.default.svc
+        server: http://cluster-local-laptop:8001
         namespace: kargo-demo-{{stage}}
       syncPolicy:
         syncOptions:
